--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,9 +2,9 @@ name: python test
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     
 jobs:
   build:
