--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -17,4 +17,10 @@ jobs:
       - uses: jannekem/run-python-script-action@v1
         with:
           script: |
-            loadData.py
+            import webScraper
+
+            data = webScraper.News()
+
+            import json
+            with open('results.json', 'w') as fp:
+              json.dump(data, fp)
