--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,6 +14,14 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install requests
+            pip install bs4
+            pip install urllib
+            
       - uses: jannekem/run-python-script-action@v1
         with:
           script: |
