--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,8 +1,8 @@
 name: python test
 
-on:
-  schedule:
-    - cron: '*/10 * * * *'
+#on:
+  #schedule:
+    #- cron: '*/10 * * * *'
     
 jobs:
   build:
