--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,9 +1,9 @@
 name: python test
 
 on:
-  #schedule:
-    #- cron: '*/5 * * * *'
   workflow_dispatch
+  schedule:
+    - cron: '*/5 * * * *'
 
     
     
